crates/aranya-policy-compiler/tests/data/statements/finish_not_last_unknown.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
7 |         check true else recall test_fail("should pass")
  |                                ^^^^^^^^^ recall block `test_fail`
